@@ -22,7 +22,7 @@
 
     <groupId>com.velopayments</groupId>
     <artifactId>java-spring-resttemplate</artifactId>
-    <version>2.16.0-SNAPSHOT</version>
+    <version>2.19.37-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
@@ -59,11 +59,9 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven-plugin-version>1.0.0</maven-plugin-version>
-        <jackson-version>[2.9.10.1,)</jackson-version>
-        <swagger-annotations-version>1.5.21</swagger-annotations-version>
-        <junit-platform.version>5.5.1</junit-platform.version>
-        <mockito.version>2.23.0</mockito.version>
-        <spring_boot.version>2.1.6.RELEASE</spring_boot.version>
+        <jackson-version>[2.10.1,)</jackson-version>
+        <swagger-annotations-version>1.6.0</swagger-annotations-version>
+        <spring_boot.version>2.2.4.RELEASE</spring_boot.version>
     </properties>
 
     <dependencies>
@@ -71,6 +69,11 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -91,6 +94,11 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
             <version>${swagger-annotations-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>0.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
@@ -118,9 +126,14 @@
             <version>${jackson-version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
+            <version>1.18.10</version>
             <optional>true</optional>
         </dependency>
 
@@ -129,12 +142,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring_boot.version}</version>
             <scope>test</scope>
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>junit</groupId>-->
-<!--                    <artifactId>junit</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.0.2</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -143,59 +157,62 @@
             <version>3.9</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit-platform.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>${junit-platform.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-platform.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!--        needed to resolve this issue: https://stackoverflow.com/questions/53926264/nosuchmethoderror-org-junit-platform-commons-util-reflectionutils-trytoloadclas-->
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-commons</artifactId>
-            <version>1.4.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                    <argLine>${surefireArgLine}</argLine>
+                    <!--Recommended to set in env or settings.xml-->
+                    <systemPropertyVariables>
+                        <VELO_API_APIKEY>${VELO_API_APIKEY}</VELO_API_APIKEY>
+                        <VELO_API_APISECRET>${VELO_API_APISECRET}</VELO_API_APISECRET>
+                        <VELO_API_PAYORID>${VELO_API_PAYORID}</VELO_API_PAYORID>
+                        <VELO_BASE_URL>${VELO_BASE_URL}</VELO_BASE_URL>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                    <argLine>${failsafeArgLine}</argLine>
+                    <!--Recommended to set in env or settings.xml-->
+                    <systemPropertyVariables>
+                        <VELO_API_APIKEY>${VELO_API_APIKEY}</VELO_API_APIKEY>
+                        <VELO_API_APISECRET>${VELO_API_APISECRET}</VELO_API_APISECRET>
+                        <VELO_API_PAYORID>${VELO_API_PAYORID}</VELO_API_PAYORID>
+                        <VELO_BASE_URL>${VELO_BASE_URL}</VELO_BASE_URL>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>4.0.3</version>
+                <version>4.2.3</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/src/main/resources/openapi.yaml</inputSpec>
+                            <inputSpec>https://raw.githubusercontent.com/velopaymentsapi/VeloOpenApi/gh-pages/openapi.json</inputSpec>
                             <generatorName>java</generatorName>
                             <library>resttemplate</library>
 
@@ -203,14 +220,16 @@
                             <generateModelDocumentation>false</generateModelDocumentation>
                             <generateApiTests>false</generateApiTests>
                             <generateModelTests>false</generateModelTests>
+                            <generateModelDocumentation>false</generateModelDocumentation>
                             <groupId>${project.groupId}</groupId>
                             <artifactVersion>${project.version}</artifactVersion>
 
                             <configOptions>
+                                <additionalModelTypeAnnotations>@lombok.Builder @lombok.AllArgsConstructor @lombok.NoArgsConstructor</additionalModelTypeAnnotations>
                                 <modelPackage>com.velopayments.oa3.model</modelPackage>
                                 <sourceFolder>src/gen/java/main</sourceFolder>
                                 <dateLibrary>java8</dateLibrary>
-                                <java8>true</java8>
+<!--                                <java8>true</java8>-->
                                 <useBeanValidation>true</useBeanValidation>
                                 <apiPackage>com.velopayments.oa3.api</apiPackage>
                                 <invokerPackage>com.velopayments.oa3.client</invokerPackage>
